force-app/main/default/objects/Manufacturing_Slot__c/Manufacturing_Slot__c.object-meta.xml
<CustomObject>
    <label>Manufacturing Slot</label>
    <nameField>
        <label>Manufacturing Slots Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Manufacturing Slots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>