force-app/main/default/objects/Manufacturing_Slot__c/fields/Capacity_Pool__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Pool__c</fullName>
    <label>Capacity Pool</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>