force-app/main/default/objects/Manufacturing_Slot__c/fields/Leukapheresis_Date__c.field-meta.xml
<CustomField>
    <fullName>Leukapheresis_Date__c</fullName>
    <label>Leukapheresis Date</label>
    <type>Date</type>
</CustomField>