force-app/main/default/objects/Manufacturing_Slot__c/fields/Manufacturing_display_name__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_display_name__c</fullName>
    <formula>Capacity_Pool__c &amp;  TEXT(Slot_Quantity__c)  &amp; Study_ID__r.Display_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manufacturing display name</label>
    <type>Text</type>
</CustomField>