force-app/main/default/objects/Manufacturing_Slot__c/fields/Manufacturing_Site__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manufacturing Site</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Manufacturing Site</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Manufacturing_Slots1</relationshipName>
    <type>Lookup</type>
</CustomField>