force-app/main/default/objects/Manufacturing_Slot__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Patient_Registration__c</referenceTo>
    <relationshipLabel>Manufacturing Slots</relationshipLabel>
    <relationshipName>Manufacturing_Slots</relationshipName>
    <type>Lookup</type>
</CustomField>