force-app/main/default/objects/Manufacturing_Slot__c/fields/Slot_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Slot_Quantity__c</fullName>
    <label>Slot Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>