force-app/main/default/objects/Manufacturing_Slot__c/fields/Study_ID__c.field-meta.xml
<CustomField>
    <fullName>Study_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study ID</label>
    <referenceTo>Study_Protocol__c</referenceTo>
    <relationshipLabel>Manufacturing Slots</relationshipLabel>
    <relationshipName>Manufacturing_Slots</relationshipName>
    <type>Lookup</type>
</CustomField>