force-app/main/default/objects/Manufacturing_Slot__c/fields/Study_Protocol__c.field-meta.xml
<CustomField>
    <fullName>Study_Protocol__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;+ Study_ID__r.Id ,  Study_ID__r.Display_Name__c , &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Study Protocol</label>
    <type>Text</type>
</CustomField>