force-app/main/default/objects/Manufacturing_Slot__c/fields/Weekday__c.field-meta.xml
<CustomField>
    <fullName>Weekday__c</fullName>
    <formula>CASE(
    TEXT( WEEKDAY( Start_Date__c ) ),
    &quot;1&quot;, &quot;Sunday&quot;,
    &quot;2&quot;, &quot;Monday&quot;,
    &quot;3&quot;, &quot;Tuesday&quot;,
    &quot;4&quot;, &quot;Wednesday&quot;,
    &quot;5&quot;, &quot;Thursday&quot;,
    &quot;6&quot;, &quot;Friday&quot;,
    &quot;7&quot;, &quot;Saturday&quot;,
    &quot;Unknown Day&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weekday</label>
    <type>Text</type>
</CustomField>