force-app/main/default/objects/Manufacturing_Slot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Leukapheresis_Date__c</columns>
    <columns>NAME</columns>
    <columns>Capacity_Pool__c</columns>
    <columns>Study_ID__c</columns>
    <columns>Slot_Quantity__c</columns>
    <columns>Clinical_Site__c</columns>
    <columns>Booking_Status__c</columns>
    <columns>Manufacturing_Site__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>