force-app/main/default/objects/Manufacturing_Slot__c/listViews/All_acknowledged_slots.listView-meta.xml
<ListView>
    <fullName>All_acknowledged_slots</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>Capacity_Pool__c</columns>
    <columns>Study_Protocol__c</columns>
    <columns>Clinical_Site__c</columns>
    <columns>Booking_Status__c</columns>
    <columns>Subject_ID__c</columns>
    <columns>Manufacturing_Site__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Booking_Status__c</field>
        <operation>equals</operation>
        <value>Acknowledged</value>
    </filters>
    <label>All acknowledged slots</label>
</ListView>