force-app/main/default/objects/Manufacturing_Slot__c/listViews/All_Expired_Slots.listView-meta.xml
<ListView>
    <fullName>All_Expired_Slots</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Booking_Status__c</field>
        <operation>equals</operation>
        <value>Expired</value>
    </filters>
    <label>All Expired Slots</label>
</ListView>