force-app/main/default/objects/Manufacturing_Slot__c/listViews/Dummy_record.listView-meta.xml
<ListView>
    <fullName>Dummy_record</fullName>
    <columns>NAME</columns>
    <columns>Leukapheresis_Date__c</columns>
    <columns>Capacity_Pool__c</columns>
    <columns>Clinical_Site__c</columns>
    <columns>Slot_Quantity__c</columns>
    <filterScope>Mine</filterScope>
    <label>Dummy record</label>
</ListView>